--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,10 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
+          <!-- Email link removed -->
           {% if site.email %}
           <li class="list-inline-item">
-            <a id="email-link" href="mailto:{{ site.email | encode_email }}">
+            <a href="mailto:{{ site.email | encode_email }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="far fa-envelope fa-stack-1x fa-inverse"></i>
